--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^2.32.3",
     "gatsby-background-image": "^1.4.1",
     "gatsby-image": "^2.11.0",
@@ -12,7 +13,9 @@
     "gatsby-plugin-offline": "^3.10.0",
     "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-sharp": "^2.14.1",
+    "gatsby-plugin-styled-components": "^3.10.0",
     "gatsby-plugin-typography": "^2.12.0",
+    "gatsby-plugin-use-dark-mode": "^1.2.0",
     "gatsby-source-filesystem": "^2.11.0",
     "gatsby-source-graphql": "^2.14.0",
     "gatsby-transformer-sharp": "^2.12.0",
@@ -20,9 +23,12 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-spring": "^8.0.27",
     "react-typography": "^0.16.19",
+    "styled-components": "^5.2.1",
     "typography": "^0.16.19",
-    "typography-theme-fairy-gates": "^0.16.19"
+    "typography-theme-fairy-gates": "^0.16.19",
+    "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
     "prettier": "2.2.1"
