--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@hot-loader/react-dom": "^16.14.0",
     "babel-plugin-styled-components": "^1.12.0",
-    "gatsby": "^2.32.3",
+    "gatsby": "^2.32.4",
     "gatsby-background-image": "^1.4.1",
     "gatsby-image": "^2.11.0",
     "gatsby-plugin-dark-mode": "^1.1.2",
     "gatsby-plugin-manifest": "^2.12.0",
-    "gatsby-plugin-offline": "^3.10.0",
+    "gatsby-plugin-offline": "^3.10.1",
     "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-sharp": "^2.14.1",
     "gatsby-plugin-styled-components": "^3.10.0",
@@ -21,13 +22,16 @@
     "gatsby-source-graphql": "^2.14.0",
     "gatsby-transformer-sharp": "^2.12.0",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.14.0",
+    "react-alice-carousel": "^2.4.0",
+    "react-bootstrap": "^1.5.0",
+    "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
     "react-spring": "^8.0.27",
     "react-typography": "^0.16.19",
     "styled-components": "^5.2.1",
     "typography": "^0.16.19",
+    "typography-theme-elk-glen": "^0.16.19",
     "typography-theme-fairy-gates": "^0.16.19",
     "use-dark-mode": "^2.3.1"
   },
