--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "react-bootstrap": "^1.5.0",
     "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
+    "react-slick": "^0.28.0",
     "react-spring": "^8.0.27",
     "react-typography": "^0.16.19",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.1",
     "typography": "^0.16.19",
     "typography-theme-elk-glen": "^0.16.19",
