--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^16.14.0",
     "react-bootstrap": "^1.5.0",
     "react-dom": "^16.14.0",
+    "react-easy-emoji": "^1.4.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-slick": "^0.28.0",
