--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@hot-loader/react-dom": "^16.14.0",
     "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^2.32.4",
     "gatsby-background-image": "^1.4.1",
     "gatsby-image": "^2.11.0",
+    "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-dark-mode": "^1.1.2",
     "gatsby-plugin-manifest": "^2.12.0",
     "gatsby-plugin-offline": "^3.10.1",
@@ -24,11 +24,9 @@
     "gatsby-transformer-sharp": "^2.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
-    "react-bootstrap": "^1.5.0",
     "react-dom": "^16.14.0",
     "react-easy-emoji": "^1.4.0",
     "react-helmet": "^6.1.0",
-    "react-icons": "^4.2.0",
     "react-slick": "^0.28.0",
     "react-spring": "^8.0.27",
     "react-typography": "^0.16.19",
@@ -36,7 +34,6 @@
     "styled-components": "^5.2.1",
     "typography": "^0.16.19",
     "typography-theme-fairy-gates": "^0.16.19",
-    "use-dark-mode": "^2.3.1",
     "uuid-v4-validator": "^2.0.0"
   },
   "devDependencies": {
