--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "gatsby": "^2.32.4",
     "gatsby-background-image": "^1.4.1",
     "gatsby-image": "^2.11.0",
+    "gatsby-plugin-advanced-sitemap": "^1.6.0",
     "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-dark-mode": "^1.1.2",
     "gatsby-plugin-manifest": "^2.12.0",
     "gatsby-plugin-offline": "^3.10.1",
+    "gatsby-plugin-purgecss": "^6.0.0",
     "gatsby-plugin-react-helmet": "^3.10.0",
+    "gatsby-plugin-robots-txt": "^1.5.5",
     "gatsby-plugin-sharp": "^2.14.1",
     "gatsby-plugin-styled-components": "^3.10.0",
     "gatsby-plugin-typography": "^2.12.0",
