--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-plugin-advanced-sitemap": "^1.6.0",
     "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-dark-mode": "^1.1.2",
+    "gatsby-plugin-favicon": "^3.1.6",
     "gatsby-plugin-manifest": "^2.12.0",
     "gatsby-plugin-offline": "^3.10.1",
     "gatsby-plugin-purgecss": "^6.0.0",
