--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-dark-mode": "^1.1.2",
     "gatsby-plugin-favicon": "^3.1.6",
+    "gatsby-plugin-favicons": "^2.0.0",
     "gatsby-plugin-manifest": "^2.12.0",
     "gatsby-plugin-offline": "^3.10.1",
     "gatsby-plugin-purgecss": "^6.0.0",
